[package]
name = "chat"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
chat_lib = { path = "../chat_lib" }
config = {version = "0.15.16", features = ["toml"]}
env_logger = "0.11.8"
log = "0.4.28"
rumqttc = "0.25.0"
tokio = { version = "1.47.1", features = ["full"] }
